--- a/forum/templates/post_answer_list.html
+++ b/forum/templates/post_answer_list.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load i18n permission_tags %}
 
 {% if answers|length > 0 %}
     <ul class="timeline post">
@@ -10,6 +10,19 @@
                             <img class="img-responsive img-rounded" src="{{ answer.user.image_url }}" />
                         </div>
                         <div class="col-xs-10 col-sm-10 col-md-10">
+                            {% if user|has_role:'system_admin' or user|has_role:'professor' and user == forum.topic.owner %}
+                                <div class="pull-right">
+                                    <div class="btn-group icon-more-horiz">
+                                        <a class="btn btn-default btn-xs dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            <i class="material-icons">more_horiz</i>
+                                        </a>
+                                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                            <li><a href="javascript:void(0)"><i class="material-icons">create</i> Edit</a></li>
+                                            <li><a href="javascript:void(0)"><i class="material-icons">delete_sweep</i> Remove</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            {% endif %}
                             <div class="timeline-heading">
                                 <h3> {{ answer.user }}</h3>
                             </div>
