--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -11,9 +11,9 @@
 
 {% block content %}
 	<div class="row">
-    <div class="col-md-4 col-md-offset-4">
+    <div class="col-sm-4 col-sm-offset-4 col-md-4 col-md-offset-4 col-xs-4 col-xs-offset-4 col-lg-4 col-lg-offset-4 col-xl-4 col-xl-offset-4">
       <div class="row">
-        <div class="col-md-offset-2 col-md-8">
+        <div class="col-sm-8 col-sm-offset-2 col-md-offset-2 col-md-8 col-xs-8 col-xs-offset-2 col-lg-offset-2 col-lg-8 col-xl-offset-2 col-xl-8">
           </br>
           </br>
           <img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block " alt="logo amadeus">
@@ -28,7 +28,7 @@
     </div>
 
   	<div class="row ">
-      <div class="col-md-8 col-md-offset-2 col-sm-6 col-sm-offset-3">
+      <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2 col-lg-8 col-lg-offset-2 col-xl-8 col-xl-offset-2">
           {% if message %}
             <div class="alert alert-danger alert-dismissible" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -45,18 +45,18 @@
                     <form id="form-login" class="form-group" method="post" action="">
         							{% csrf_token %}
         							<div class="form-group is-empty">
-        								<label for="inputEmail" class="col-md-4 control-label"> {% trans 'Username' %}</label>
-                        <div class="col-md-8">
+        								<label for="inputEmail" class="col-md-4 col-xs-4 col-sm-4 col-lg-4 control-label"> {% trans 'Username' %}</label>
+                        <div class="col-md-8 col-xs-8 col-lg-8 col-sm-8">
                             <input form="form-login" type="text" name="username" class="form-control" id="inputEmail" placeholder="Username" value="{% if username %}{{username}}{% endif %}">
                         </div>
         							</div>
                       <div class="form-group is-empty">
-                          <label for="inputPassword" class="col-md-4 control-label"> {% trans 'Password' %}</label>
-                          <div class="col-md-8">
+                          <label for="inputPassword" class="col-md-4 col-xs-4 col-lg-4 col-sm-4 control-label"> {% trans 'Password' %}</label>
+                          <div class="col-md-8 col-xs-8 col-lg-8 col-sm-8">
                               <input form="form-login" type="password" name="password" class="form-control" id="inputPassword" placeholder="Password">
                           </div>
                       </div>
-                      <div class="col-md-10">
+                      <div class="col-md-10 col-sm-10 col-xs-10 col-lg-10">
                         <div class="checkbox">
                           <label>
                               <input form="form-login" type="checkbox" name="checkbox"><span class="checkbox-material"><span class="check"></span></span> {% trans 'Remember Email' %}
@@ -66,25 +66,21 @@
         						</form>
                   {# </div> #}
                   {# <div class="row"> #}
-                    <div class="col-md-10">
+                    <div class="col-md-10 col-sm-10 col-xs-10 col-lg-10">
                         <a href="{% url 'core:remember_password' %}">Forgot your password?</a>
                     </div>
                   {# </div> #}
                   {# <div class="row"> #}
-                    <div class="col-md-6 col-xs-6 text-center">
+                    <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
                         <button type="button" class="btn btn-flat" formaction="#" style="position: initial;">{% trans 'Guest' %}</button>
                     </div>
-                    <div class="col-md-6 col-xs-6 text-center">
+                    <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
                         <button type="submite" class="btn btn-flat btn-success" form="form-login" style="position: initial;">{% trans 'Login' %}</button>
                     </div>
                   {# </div> #}
                 </div>
               </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-offset-2 col-lg-8 col-md-8 col-md-offset-2 col-sm-6 col-sm-offset-3">
-          <a class="btn btn-raised btn-primary btn-lg btn-block" href="{% url 'core:register' %}">{% trans 'Sign Up' %} </a>
+          <a class="btn btn-raised btn-primary btn-block" href="{% url 'core:register' %}">{% trans 'Sign Up' %} </a>
       </div>
     </div>
   </div>
