--- a/users/templates/users/create.html
+++ b/users/templates/users/create.html
@@ -14,6 +14,7 @@
 
 
 {% block content %}
+	<script src="{% static 'js/base/amadeus.js' %}"></script>
 	{% if messages %}
 		{% for message in messages %}
 			<div class="alert alert-success alert-dismissible" role="alert">
@@ -33,30 +34,33 @@
 					{% for field in form %}
 						<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput">
 							{% if field.auto_id == 'id_birth_date' %}
-                <label for="{{ field.auto_id }}">{{ field.label }}</label>
+		                		<label for="{{ field.auto_id }}">{{ field.label }}</label>
 								<input type="date" class="form-control"name="{{field.name}}" value="{% if field.value.year %}{{field.value|date:'Y-m-d'}}{% else %}{{field.value}}{% endif %}">
 							{% elif field.auto_id == 'id_image' %}
-                <label for="{{ field.auto_id }}">{{ field.label }}</label>
+		                		<label for="{{ field.auto_id }}">{{ field.label }}</label>
 								{% render_field field class='form-control' %}
 								<div class="input-group">
-                  <input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your photo...' %}">
-                  <span class="input-group-btn input-group-sm">
-                    <button type="button" class="btn btn-fab btn-fab-mini">
-                    	<i class="material-icons">attach_file</i>
-                    </button>
-                  </span>
-                </div>
-				      {% elif field.auto_id == 'id_is_staff' or field.auto_id == 'id_is_active' %}
-                <div class="checkbox">
-                  <label>
-                      <input type="checkbox" name="checkbox"><span class="checkbox-material"><span class="check"></span></span> {{field.label}}
-                  </label>
-                </div>
+				                  	<input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your photo...' %}">
+				                  	<span class="input-group-btn input-group-sm">
+				                    	<button type="button" class="btn btn-fab btn-fab-mini">
+				                    		<i class="material-icons">attach_file</i>
+				                   		</button>
+				                  	</span>
+				                </div>
+				      		{% elif field.auto_id == 'id_is_staff' or field.auto_id == 'id_is_active' %}
+                				<div class="checkbox">
+                  					<label>
+                      					<input type="checkbox" name="checkbox"><span class="checkbox-material"><span class="check"></span></span> {{field.label}}
+                  					</label>
+                				</div>
+                			{% elif field.auto_id == 'id_cpf' %}
+                				<label for="{{ field.auto_id }}">{{ field.label }}</label>
+                				{% render_field field class='form-control' onkeypress='campoNumerico(this,event); formatarCpf(this,event);' %}
 							{% else %}
-                <label for="{{ field.auto_id }}">{{ field.label }}</label>
+                				<label for="{{ field.auto_id }}">{{ field.label }}</label>
 								{% render_field field class='form-control' %}
 							{% endif %}
-              <span id="helpBlock" class="help-block">{{ field.help_text }}</span>
+              				<span id="helpBlock" class="help-block">{{ field.help_text }}</span>
 							{% if field.errors.length > 0 %}
 								<div class="alert alert-danger alert-dismissible" role="alert">
 				  					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -84,4 +88,8 @@
 </br>
 </br>
 </br>
+{% endblock %}
+
+{% block javascript %}
+	
 {% endblock %}
