--- a/users/templates/list_users.html
+++ b/users/templates/list_users.html
@@ -24,6 +24,16 @@
 {% endblock %}
 
 {% block content %}
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-success alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <p>{{ message }}</p>
+            </div>
+        {% endfor %}
+    {% endif %}
     <form action="" method="GET" class="form-horizontal">
         <div class="form-group">
             <div class="col-md-9 col-sm-9 col-xs-9">
