--- a/users/templates/list_users.html
+++ b/users/templates/list_users.html
@@ -1,6 +1,6 @@
 {% extends 'home.html' %}
 
-{% load i18n pagination django_bootstrap_breadcrumbs %}
+{% load i18n pagination django_bootstrap_breadcrumbs static  %}
 
 {% block breadcrumbs %}
 
@@ -26,7 +26,7 @@
 {% block content %}
     {% if messages %}
         {% for message in messages %}
-            <div class="alert alert-success alert-dismissible" role="alert">
+            <div class="alert alert-{{ message.tag }} alert-dismissible" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -50,7 +50,11 @@
             <div class="row panel panel-default">
                 <div class="panel-body">
                     <div class="col-md-4">
-                        <img src="{{ acc.image.url }}" alt="photoUser" class="img-circle img-responsive">
+                        {% if acc.image %}
+                            <img src="{{ acc.image.url }}" alt="photoUser" class="img-circle img-responsive">
+                        {% else %}
+                            <img src="{% static 'images/avatar.png' %}" alt="Avatar" class="img-circle img-responsive">
+                        {% endif %}
                     </div>
                     <div class="col-md-8">
                         <p>{% trans 'Name' %}: {{ acc.name }}</p>
