--- a/users/templates/list_users.html
+++ b/users/templates/list_users.html
@@ -26,7 +26,7 @@
 {% block content %}
     {% if messages %}
         {% for message in messages %}
-            <div class="alert alert-{{ message.tag }} alert-dismissible" role="alert">
+            <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
