--- a/users/templates/users/create.html
+++ b/users/templates/users/create.html
@@ -17,7 +17,7 @@
 	<script src="{% static 'js/base/amadeus.js' %}"></script>
 	{% if messages %}
 		{% for message in messages %}
-			<div class="alert alert-success alert-dismissible" role="alert">
+			<div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
 				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
@@ -76,7 +76,7 @@
 						</div>
 					{% endfor %}
 					<div class="col-md-offset-2 col-md-2 col-sm-2 col-xs-2">
-						<input type="submit" value="{% trans 'Save' %}" class="btn btn-sm btn-success" />
+						<input type="submit" value="{% trans 'Save' %}" class="btn btn-sm btn-success" onclick="validarCpfSemAlert(id_cpf, CPF, idElementoMensagemErro)'" />
 					</div>
 					<div class="col-md-offset-3 col-md-2 col-sm-2 col-xs-2">
 						<a href="{% url 'users:manage' %}" class="btn btn-sm btn-default" >{% trans 'Cancel' %}</a>
