--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -74,8 +74,8 @@
               <i class="material-icons">more_horiz</i>
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-              <li><a href="javascript:void(0)"><i class="material-icons">create</i> Edit</a></li>
-              <li><a href="javascript:void(0)"><i class="material-icons">delete_sweep</i> Remove</a></li>
+              <li><a href="{% url 'course:update' course.slug %}"><i class="material-icons">create</i> Edit</a></li>
+              <li><a href="{% url 'course:delete' course.slug %}"><i class="material-icons">delete_sweep</i> Remove</a></li>
             </ul>
 
           </div>
