--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -32,28 +32,25 @@
     </script>
     <script src="{% static 'js/base/header.js'%}"></script>
 	<!--Javascript block for specific-app ones -->
-	
+
 </head>
 <body>
 	<div class="container-fluid">
 		{% block nav %}
 			<div class="row">
-				<div class="container-fluid">
-					<div class="row">
 			        	<div class="navbar navbar-default">
-			            	<div class="container-fluid">
 			              		<div class="navbar-header">
 			                		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
 			                  			<span class="icon-bar"></span>
 			                  			<span class="icon-bar"></span>
 			                  			<span class="icon-bar"></span>
 			                		</button>
-			                		<a class="navbar-brand" href="{% url 'app:index' %}"><img class="logo" src="{% static 'img/topo-amadeus.png'  %}" alt="Logo"/></a>
+			                		<a class="navbar-brand" href="{% url 'app:index' %}"><img class="logo" src="{% static 'img/topo-amadeus-white.png'  %}" alt="Logo"/></a>
 			              		</div>
 			              		<div class="navbar-collapse collapse navbar-responsive-collapse">
 			                		<ul class="nav navbar-nav navbar-right notifications">
-			                  			 <li class="" data-toggle="tooltip" data-placement="bottom" title data-original-title="notifications">         
-						                   <a  class="dropdown-toggle" data-toggle="dropdown"> <span class="badge notification-count">{{notifications.count}}</span><i class="fa fa-bell-o" aria-hidden="true"></i></a>
+			                  			 <li class="" data-toggle="tooltip" data-placement="bottom" title data-original-title="notifications">
+						                   <a  class="dropdown-toggle" data-toggle="dropdown"> <span class="badge notification-count">{{notifications.count}}</span><i class="fa fa-bell" aria-hidden="true"></i></a>
 						                     <ul id="notification-dropdown" class="dropdown-menu">
 						                     <li class="dropdown-header">Notifications</li>
 						                     	{% for notification in notifications  %}
@@ -78,7 +75,7 @@
 								                                    <i class="material-icons">folder</i>
 								                                  </div>
 								                                  <div class="row-content">
-								                                    
+
 								                                    <div class="least-content pull-right">{{ notification.datetime }}</div>
 
 								                                    <p class="list-group-item-text">{{ notification.message }}</p>
@@ -92,54 +89,46 @@
 						                      </ul>
 						                 </li>
 
-			                  			<li class="link" data-toggle="tooltip" data-placement="bottom" title data-original-title="messages"> <a href="#"><i class="fa fa-comments" aria-hidden="true"></i></a> </li>
-			                  			<li class="link"> <a href="{% url 'users:profile' %}">{{ user }}</a></li>
-			                  			<li class="link"> <a href="{% url 'core:logout' %}">{% trans 'Log out' %}</a></li>
+			                  			<li  data-toggle="tooltip" data-placement="bottom" title data-original-title="{% trans 'messages' %}"> <a href="#"><i class="fa fa-comments" aria-hidden="true"></i></a> </li>
+			                  			<li > <a  class="link" href="{% url 'users:profile' %}">{{ user }}</a></li>
+			                  			<li data-toggle="tooltip" data-placement="bottom" title data-original-title="log out"> <a href="{% url 'core:logout' %}"><i class="fa fa-sign-out" aria-hidden="true"></i></a></li>
 			                		</ul>
 			              		</div>
-			            	</div>
 			        	</div>
-			    	</div>
-			    </div>
 			</div>
 		{% endblock %}
 
 		<div class="row">
-		    <div class="container-fluid">
-		    	<div class="row">
-		    		<div class="col-xs-* col-sm-* col-md-2">
+		    		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
 						{% block sidebar %}
 
 						{% endblock %}
 		    		</div>
 
-		    		<div class="col-xs-* col-sm-* col-md-10">
+		    		<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
 				    	{% block breadcrumbs %}
 
 				    	{% endblock %}
-				    	
+
 				    	{% block render_breadcrumbs %}
 
 				    	{% endblock %}
+							<div class="row">
+								<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9 col-xl-9">
+								{% block content %}
 
-				    	<div class="row">
-				    		<div class="container-fluid">
-				    			<div class="col-xs-* col-sm-* col-md-8">
-									{% block content %}
+								{% endblock %}
+			    			</div>
 
-									{% endblock %}
-				    			</div>
+			    			<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+								{% block rightbar %}
 
-				    			<div class="col-xs-* col-sm-* col-md-4">
-									{% block rightbar %}
+								{% endblock rightbar %}
+			    			</div>
+							</div>
+				    </div>
 
-									{% endblock rightbar %}
-				    			</div>
-				    		</div>
-				    	</div>
-		    		</div>
-				</div>
-			</div>
+
 		</div>
 	</div>
 
