--- a/core/templates/register_user.html
+++ b/core/templates/register_user.html
@@ -45,7 +45,7 @@
 						                    </span>
 						                </div>
 									{% else %}
-										{% render_field field class='form-control input-sm' %}
+										{% render_field field class='form-control' %}
 										<span id="helpBlock" class="help-block">{{ field.help_text }}</span>
 									{% endif %}
 								</div>
@@ -68,7 +68,7 @@
 								<input type="submit" value="{% trans 'Save' %}" class="btn btn-sm btn-success" />	
 							</div>
 							<div class="col-md-offset-3 col-md-2 col-sm-2 col-xs-2">
-								<a href="{% url 'core:home' %}" class="btn btn-sm btn-success" >{% trans 'Login' %}</a>	
+								<a href="{% url 'core:home' %}" class="btn btn-sm btn-success" >{% trans 'Register' %}</a>	
 							</div>
 							
 						</form>
