--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -52,50 +52,75 @@
 
 	{% if courses|length > 0 %}
 		{% for course in courses %}
-			<div class="row well well-inverse">
-		  		<div class="col-md-2">
-            {% if course.image %}
-		  			<img src="{{ course.image.url }}" class="img-responsive" />
-            {% else %}
-            <img src="" class="img-responsive" />
-            {% endif %}
-	  			</div>
+			<div class="col-md-12">
+			    <div class="panel panel-info">
+			    <!--{% if course.image %}
+	  				<img src="{{ course.image_url }}" class="img-responsive" />
+	            {% else %}
+	            	<img src="" class="img-responsive" />
+	            {% endif %} -->
+				  <div class="panel-heading">
+				    	<h3 class="panel-title">Course</h3>
+				    	<span class="label label-info">{{ course.category }}</span>
+							<span class="label label-warning">{{ course.max_students }} {% trans 'students tops' %}</span>  
+				  </div>     
+				  <div class="panel-body">
+				    <p><b>Course Name: </b>{{ course.name }}</p>
+				    <p><b>Duration (in semesters): </b>09</p>
+				    <p><b>Coordinator: </b>Alan Turing</p>
+				    <p>
+				      <b>Description:</b>
+				      <i>
+				        "Lorem ipsum dolor sit amet, consecctetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+				      </i>
+				    </p>
+
+				    {% if user|has_role:'professor, system_admin' %}
+						<a href="{% url 'course:update' course.slug %}" class="btn btn-sm btn-primary">
+							<span class="glyphicon glyphicon-edit"></span>
+						</a>
+						<a href="{% url 'course:delete' course.slug %}" class="btn btn-sm btn-danger">
+							<span class="glyphicon glyphicon-trash"></span>
+						</a>
+					{% endif %}
+
+				    <a href="course_detail_student.html" class="btn btn-raised btn-default center-block">View Course</a>
+
+				  </div>
+				</div>            
+    		</div>
+			<div class="row">
 		  		<div class="col-md-10">
 					<div class="row">
-			  			<div class="col-md-12">
+			  				<!--<div class="col-md-12">
 							<div class="pull-right">
 								<a href="{% url 'course:view' course.slug %}" class="btn btn-sm btn-info">
 									<span class="glyphicon glyphicon-eye-open"></span>
 								</a>
-								{% if user|has_role:'professor, system_admin' %}
-									<a href="{% url 'course:update' course.slug %}" class="btn btn-sm btn-primary">
-										<span class="glyphicon glyphicon-edit"></span>
-									</a>
-									<a href="{% url 'course:delete' course.slug %}" class="btn btn-sm btn-danger">
-										<span class="glyphicon glyphicon-trash"></span>
-									</a>
-								{% endif %}
+								
 							</div>
 							<h4>
 								<a href="{% url 'course:view' course.slug %}">
 									{{ course }}
 								</a>
 							</h4>
-							<span class="label label-info">{{ course.category }}</span>
-							<span class="label label-warning">{{ course.max_students }} {% trans 'students tops' %}</span>
+							
 							<small>
 								<em>{{ course.objectivies|linebreaks }}</em>
 							</small>
 			  			</div>
-			  			<div class="col-md-12">
+			  		<div class="col-md-12">
 			  				<strong>{% trans 'Subscribe Period:' %} </strong> <em>de</em> <u>{{ course.init_register_date }}</u> <em>até</em> <u>{{ course.end_register_date }}</u>
 			  				<br />
 							<strong>{% trans 'Period:' %} </strong> <em>de</em> <u>{{ course.init_date }}</u> <em>até</em> <u>{{ course.end_date }}</u>
-			  			</div>
+			  			</div> -->
 					</div>
 		  		</div>
 			</div>
+
     	{% endfor %}
+
+
     	<nav aria-label="Page navigation">
   			<ul class="pagination">
     			{% for page_number in paginator.page_range %}
