add float button

--- a/app/templates/home_teacher_student_content.html
+++ b/app/templates/home_teacher_student_content.html
@@ -1,6 +1,6 @@
 {% load static i18n %}
 
-{% for notification in objects %}
+<!--{% for notification in objects %}
     <li {% if not notification.read %}class="not_read"{% endif %}>
         <div class="avatar">
             <img src="{{ notification.user.image_url }}">
@@ -16,4 +16,5 @@
             <div class="arrow"></div>
         </div>
     </li>
-{% endfor %}
+{% endfor %}-->
+
