--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -123,6 +123,9 @@
 				{% include page_template %}
 			</div>
 		</ul>
+		<a class="btn-floating btn-large waves-effect waves-light red" href="{% url 'course:create' %}">
+			<i class="fa fa-plus" aria-hidden="true"></i>
+		</a>
 	{% endif %}
 	
 	<div id="loading" class="alert alert-primary" role="alert" style="display: none">
