--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -8,30 +8,25 @@
 
 	<meta http-equiv="Cache-Control" content="no-cache, no-store" />
 
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-	<link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7/css/bootstrap.min.css' %}" />
-	<link rel="stylesheet" type="text/css" href="{% static 'material/css/bootstrap-material-design.min.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'material/css/ripples.min.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'font-awesome-4.6.3/css/font-awesome.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/base/header.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/base/amadeus.css' %}">
-	<!--CSS block for specific-app ones -->
+	
 	{% block style %}
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+	    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+		<link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7/css/bootstrap.min.css' %}" />
+		<link rel="stylesheet" type="text/css" href="{% static 'material/css/bootstrap-material-design.min.css' %}">
+		<link rel="stylesheet" type="text/css" href="{% static 'material/css/ripples.min.css' %}">
+		<link rel="stylesheet" type="text/css" href="{% static 'font-awesome-4.6.3/css/font-awesome.min.css' %}">
+	    <link rel="stylesheet" type="text/css" href="{% static 'css/base/header.css' %}">
+	    <link rel="stylesheet" type="text/css" href="{% static 'css/base/amadeus.css' %}">
+		<!--CSS block for specific-app ones -->
+		<link href="{% static 'img/favicon.ico' %}" rel="shortcut icon" />
+
 	{% endblock %}
 
-	<link href="{% static 'img/favicon.ico' %}" rel="shortcut icon" />
-
-	<script type="text/javascript" src="{% static 'js/jquery-3.1.0.min.js' %}"></script>
-	<script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.min.js' %}"></script>
-	<script src="{% static 'material/js/material.min.js' %}"></script>
-    <script src="{% static 'material/js/ripples.min.js' %}"></script>
-	<script>
-    	$.material.init();
-    </script>
-    <script src="{% static 'js/base/header.js'%}"></script>
-	<!--Javascript block for specific-app ones -->
+	<!-- Compiled and minified CSS -->
+	  <link rel="stylesheet" type="text/css" href="{% static 'materialize/css/materialize.css' %}">      
+	  <link rel="stylesheet" type="text/css" href="{% static 'materialize/css/materialize.min.css' %}">      
 
 </head>
 <body>
@@ -133,6 +128,17 @@
 	</div>
 
 	{% block javascript %}
+		<script type="text/javascript" src="{% static 'js/jquery-3.1.0.min.js' %}"></script>
+		<script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.min.js' %}"></script>
+		<script src="{% static 'material/js/material.min.js' %}"></script>
+	    <script src="{% static 'material/js/ripples.min.js' %}"></script>
+		<script>
+	    	$.material.init();
+	    </script>
+	    <script src="{% static 'js/base/header.js'%}"></script>
+		<!--Javascript block for specific-app ones -->
+ 		<link rel="stylesheet" type="text/css" href="{% static 'materialize/js/materialize.css' %}">      
+	  	<link rel="stylesheet" type="text/css" href="{% static 'materialize/js/materialize.min.css' %}">  
 
 	{% endblock %}
 </body>
