--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -67,7 +67,7 @@
 				  <div class="panel-body">
 				    <p><b>Course Name: </b>{{ course.name }}</p>
 				    <p><b>Duration (in semesters): </b>09</p>
-				    <p><b>Coordinator: </b>Alan Turing</p>
+				    <p><b>Coordinator: </b>{{course.professors}}</p>
 				    <p>
 				      <b>Description:</b>
 				      <i>
