--- a/courses/templates/topic/index.html
+++ b/courses/templates/topic/index.html
@@ -18,28 +18,36 @@
 
 {% block sidebar %}
 
-    <div class="panel panel-primary">
-
-      <div class="panel-heading">
-        <h3 class="panel-title">{{course}}</h3>
-      </div>
-
-      <div class="panel-body">
-        <!--{% for subject in subjects %}
-				<div class="row">
-					<div class="col-md-12 col-sm-12">
-						{{subject}}
-					</div>
-				</div>
-        {% endfor %}-->
-      </div>
+    <div class="panel panel-primary navigation">
+        <div class="panel-heading">
+            <h5>{% trans 'Menu' %}</h5>
+        </div>
+        <div class="panel-body">
+        	<ul class="nav nav-pills nav-stacked">
+              	<li><a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
+              	<li><a href="{% url 'course:manage' %}">{% trans 'My Courses' %}</a></li>
+            </ul>
+        </div>
     </div>
-
-		
+    <div class="panel panel-primary navigation">
+    <div class="panel-heading">
+        <h3 class="panel-title">Actions</h3>
+    </div>
+    <div class="panel-body">
+        <ul class="nav nav-pills nav-stacked">
+            <li><a href="javascript:void(0)">Participants</a></li>
+            <li><a href="javascript:void(0)">Replicate subject</a></li>
+            <li><a href="javascript:void(0)">Create subject</a></li>
+            <li><a href="javascript:void(0)">Edit subject</a></li>
+            <li><a href="javascript:void(0)">Remove subject</a></li>
+        </ul>
+    </div>
+</div>
 {% endblock %}
 
 {% block content %}
-  <div class="panel panel-info">
+<div class="col-md-12 col-xs-12 col-sm-12">
+<div class="panel panel-info">
     <div class="panel-heading">
 			<div class="row">
 	      <div class="col-md-7 col-sm-7">
@@ -63,18 +71,135 @@
       </p>
     </div>
   </div>
-<!--{% for topic in topics %}
-	{% if user|has_role:'system_admin' or topic.owner == user%}
-		{% include "subject/form_view_teacher.html" %}
-	{% else %}
-		{% include "subject/form_view_student.html" %}
-	{% endif %}
-{% endfor %}
-	{% if user|has_role:'system_admin' or topic.owner == user%}
-		<a name="create_topic" class="btn btn-primary btn-md btn-block" href="{% url 'course:create_topic' subject.slug %}">{% trans "Create Topic" %}</a>
-	{% endif %}	
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <form class="form-horizontal">
+        <fieldset>
+          <legend>Atividade 1</legend>
 
-{% endblock %}-->
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-4">
+            
+              <div class="form-group is-empty">
+                <input type="text" class="form-control col-md-8" placeholder="Search Student">
+              </div>
+            
+          </div>
+        </div>
+            <div class="panel-group" id="accordion">
+              <div class="panel panel-info">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                      Aluno Maria<i class="fa fa-plus-square" aria-hidden="true"></i></a>
+                    </h4>
+                  </div>
+                  <div id="collapse1" class="panel-collapse collapse">
+                    <div class="panel-body">
+                     <div class="row">
+                      <div class="col-md-6">
+                       <i class="fa fa-file-archive-o fa-lg" aria-hidden="true">Atividade.doc</i> 
+
+                     </div>
+                     <div class="col-md-6">
+                      <label> Nota:</label>
+                      <input type="number" step="0.01">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-info">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                   Aluno Joao<i class="fa fa-plus-square" aria-hidden="true"></i></a>
+                 </h4>
+               </div>
+               <div id="collapse2" class="panel-collapse collapse">
+                <div class="panel-body">
+                 <div class="row">
+                  <div class="col-md-6">
+                   <i class="fa fa-file-archive-o fa-lg" aria-hidden="true">Atividade.doc</i> 
+
+                 </div>
+                 <div class="col-md-6">
+                  <label> Nota:</label>
+                  <input type="number" step="0.01">
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <div class="panel panel-info">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                Aluno Santos<i class="fa fa-plus-square" aria-hidden="true"></i></a>
+              </h4>
+            </div>
+            <div id="collapse3" class="panel-collapse collapse">
+              <div class="panel-body">
+               <div class="row">
+                <div class="col-md-6">
+                 <i class="fa fa-file-archive-o fa-lg" aria-hidden="true">Atividade.doc</i> 
+
+               </div>
+               <div class="col-md-6">
+                <label> Nota:</label>
+                <input type="number" step="0.01">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h4 class="panel-title">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
+             Aluno Ruam<i class="fa fa-plus-square" aria-hidden="true"></i></a>
+           </h4>
+         </div>
+         <div id="collapse4" class="panel-collapse collapse">
+          <div class="panel-body">
+           <div class="row">
+            <div class="col-md-6">
+             <i class="fa fa-file-archive-o fa-lg" aria-hidden="true">Atividade.doc</i> 
+
+           </div>
+           <div class="col-md-6">
+            <label> Nota:</label>
+            <input type="number" step="0.01">
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+</div>
+</div>
+
+</fieldset></form>
+
+<ul class="pagination pagination-sm">
+  <li class="disabled"><a href="javascript:void(0)">«</a></li>
+  <li class="active"><a href="javascript:void(0)">1</a></li>
+  <li><a href="javascript:void(0)">2</a></li>
+  <li><a href="javascript:void(0)">3</a></li>
+  <li><a href="javascript:void(0)">4</a></li>
+  <li><a href="javascript:void(0)">5</a></li>
+  <li><a href="javascript:void(0)">»</a></li>
+</ul>
+
+</div>
+
+
+</div>
+</div>
+{% endblock %}
 
 {% block rightbar %}
 
