change create button. Removing in the dashboard, puted in the list curses

--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -148,6 +148,9 @@
     </div>
   </div>
 {% endfor %}
+<a class="btn-floating btn-large waves-effect waves-light red" href="{% url 'course:create' %}">
+      <i class="fa fa-plus" aria-hidden="true"></i>
+    </a>
 {% endblock %}
 
 
