fixed activity and material models, changed base.html on notifications

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -85,7 +85,14 @@
 						                     		{% endif %}
 						                     	{% endfor %}
 
-						                     	<div> <p>See more</p> </div>
+						                     		<li>
+						                     		 <a>
+						                     			<div class="list-group-item">
+								                                  <div class="row-content">
+								                                    <p class="list-group-item-text">See More</p>
+								                                </div>
+								                       </a>
+						                     		</li>
 						                      </ul>
 						                 </li>
 
