Message in register user #14

--- a/core/templates/register_user.html
+++ b/core/templates/register_user.html
@@ -8,11 +8,16 @@
 
 
 {% block content %}
-	{% if message %}
-		<div class="alert alert-danger">
-			{{message}}
-		</div>
-	{% endif %}
+	{% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <p>{{ message }}</p>
+            </div>
+        {% endfor %}
+    {% endif %}
 	<div class="row logo-row">
         <div class="col-lg-offset-2 col-lg-9">
             <img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block " alt="logo amadeus" id="logo">
