Adding js base/amadeus in base.html for cpf mask #14

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -38,6 +38,7 @@
 	<script type="text/javascript">$.material.init()</script>
 
 	<!--Javascript block for specific-app ones -->
+	<script src="{% static 'js/base/amadeus.js' %}"></script>
 	{% block style %}
 	{% endblock %}
 </head>
