Separando a enquete em uma app

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -8,7 +8,7 @@
 
 	<meta http-equiv="Cache-Control" content="no-cache, no-store" />
 	<link href="{% static 'img/favicon.ico' %}" rel="shortcut icon" />
-	
+
 	<!-- Roboto font -->
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -18,11 +18,11 @@
 	<script type="text/javascript" src="{% static 'js/vendor/jquery-ui.js' %}"></script>
 
   	<!-- Bootstrap and themes (material) -->
-  	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/bootstrap.min.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7/css/bootstrap.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/material.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/ripples.min.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/datepicker.css' %}">
-	<script type="text/javascript" src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
+	<link rel="stylesheet" type="text/css" href="{% static 'css/datepicker.css' %}">
+	<script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/vendor/bootstrap-acessibility.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/vendor/material.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/vendor/ripples.min.js' %}"></script>
@@ -141,8 +141,6 @@
 			    			</div>
 							</div>
 				    </div>
-
-
 		</div>
 	</div>
 </body>
