Adding post deletion [Issue: #74]

--- a/forum/templates/post/post_render.html
+++ b/forum/templates/post/post_render.html
@@ -9,13 +9,14 @@
                     <i class="material-icons">reply</i>
                 </a>
                 {% if request.user|has_role:'system_admin' or request.user|has_role:'professor' and request.user == post.user %}
+                    {% csrf_token %}
                     <div class="btn-group icon-more-horiz">
                         <a class="btn btn-default btn-xs dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <i class="material-icons">more_horiz</i>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                             <li><a href="javascript:void(0)"><i class="material-icons">create</i> {% trans 'Edit' %}</a></li>
-                            <li><a href="javascript:void(0)"><i class="material-icons">delete_sweep</i> {% trans 'Remove' %}</a></li>
+                            <li><a href="javascript:delete_post('{% url 'forum:delete_post' post.id %}', '{{ post.id }}')"><i class="material-icons">delete_sweep</i> {% trans 'Remove' %}</a></li>
                         </ul>
                     </div>
                 {% endif %}
